--- a/app.json
+++ b/app.json
@@ -142,11 +142,11 @@
 
       "SUPPORT_CHAT": {
 
-         "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to masha support than consider you made an enemy.",
+         "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to LOVELY support than consider you made an enemy.",
 
          "required": true,
 
-         "value": "SiderzChat"
+         "value": "BLAZE_SUPPORT"
 
       },
 
