--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
 
-      "name": "Lovely Robot ",
+      "name": " LOVELY ROBOT ",
 
       "description": "Telegram group management bot Powered By @THE_BLAZE_NETWORK ⛦➪.",
 
-      "logo": "https://telegra.ph/file/695f159289723a4ff4d08.jpg",
+      "logo": "https://telegra.ph/file/4959daba057bdf77b67fd.jpg",
 
       "keywords": [
 
