--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
 
       "name": " LOVELY ROBOT ",
 
-      "description": "Telegram group management bot Powered By @THE_BLAZE_NETWORK ⛦➪.",
+      "description": "Telegram group management bot.",
 
-      "logo": "https://telegra.ph/file/e0fe477730310fb1b610e.jpg",
+      "logo": "https://telegra.ph/file/1db0690a523e390d75463.jpg",
 
       "keywords": [
 
